<resources>
    <string name="app_name">ATM_Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ATM Consultoria</string>
    <string name="nav_header_subtitle">wesleyantunesdca@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="texto_principal">A ATM consultoria tem como objetivo orientar e apoiar organizações que tem como objetivo o sucesso!</string>

    <string name="menu_principal">Principal</string>
    <string name="menu_servicos">Servicos</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_sobre">Contatos/Sobre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloServico">Sistema de gestão de qualidade</string>
    <string name="textoServico1">Lorem ipsum quis hac morbi cras aenean placerat molestie adipiscing, accumsan nostra vivamus elit curabitur maecenas aliquet et, vel iaculis at blandit cubilia euismod donec augue. potenti auctor venenatis adipiscing faucibus iaculis nec duis nostra, eleifend elementum semper morbi feugiat justo tristique sodales ut, cras mauris risus sit suscipit fusce turpis</string>
    <string name="subTituloServico">Sistema de gestão de qualidade</string>
    <string name="textoServico2">Lorem ipsum quis hac morbi cras aenean placerat molestie adipiscing, accumsan nostra vivamus elit curabitur maecenas aliquet et, vel iaculis at blandit cubilia euismod donec augue. potenti auctor venenatis adipiscing.</string>

    <string name="tituloClientes">Clientes</string>
    <string name="textoClientes">Em mais de 15 anos de existência a ATM acumula experiência em serviços de consultoria para empresas nacionais e multinacionais de diversos portes, tendo atendido mais de 1000 empresas desde sua abertura.</string>
    <string name="item1Cliente">Cielo</string>
    <string name="item2Cliente">Americanas</string>
    <string name="item3Cliente">Samsung</string>
    <string name="item4Cliente">Devs.com</string>
    <string name="item5Cliente">Natura</string>
    <string name="item6Cliente">NsNova</string>
    <string name="item7Cliente">OpetPlace</string>

</resources>
